--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <title>eMercado - Todo lo que busques está aquí</title>
+    <meta name="description" content="Tienda virtual">
+    <!-- Google Oauth -->
+    <script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
+    <meta name="google-signin-client_id" content="248612205064-44cri76i4vjos5r0i3ise0njco0gsg6k.apps.googleusercontent.com">
 
+    <title>eMercado - Todo lo que busques está aquí</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
     <!-- Bootstrap core CSS -->
@@ -21,7 +24,7 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-        <a class="py-2 d-none d-md-inline-block" href="login.html" onclick="cerrarSesion()">Cerrar sesión</a>
+        <a class="py-2 d-none d-md-inline-block" href="login.html" onclick="desconectar()">Cerrar sesión</a>
       </div>
     </nav>
     <main role="main">
@@ -103,6 +106,28 @@
         <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
       </div>
     </footer>
+    <script>
+
+    function desconectar(){
+      cerrarSesion();
+      // Google signOut
+      if(gapi.auth2 != undefined){googleSignOut();}
+      location.href = "./login.html";
+    }
+
+    function googleSignOut(){
+      let auth2 = gapi.auth2.getAuthInstance();
+      auth2.signOut().then(function () {
+       console.log('User signed out.');
+     });
+    }
+
+    function onLoad() {
+      gapi.load('auth2', function() {
+        gapi.auth2.init();
+      });
+    }
+    </script>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
