--- a/login.html
+++ b/login.html
@@ -79,7 +79,7 @@
                   <a href="#" class="btn btn-block py-2 btn-facebook">
                     <span class="icon-facebook mr-3"></span> Iniciar sesión con Facebook
                   </a>
-                  <a href="#" class="btn btn-block py-2 btn-google" data-onsuccess="iniciarConGoogle" data-theme="dark"><span class="icon-google mr-3"></span> Iniciar sesión con Google</a>
+                  <button class="btn btn-block py-2 btn-google" data-onsuccess="iniciarConGoogle" data-theme="dark"><span class="icon-google mr-3"></span> Iniciar sesión con Google</button>
                 </div>
               </form>
             </div>
