Entrega 1 - Actualizacion login

--- a/login.html
+++ b/login.html
@@ -75,11 +75,13 @@
 
                 <span class="text-center my-3 d-block">or</span>
 
-                <div class="">
+                <div class="Oauths">
                   <a href="#" class="btn btn-block py-2 btn-facebook">
                     <span class="icon-facebook mr-3"></span> Iniciar sesión con Facebook
                   </a>
-                  <button class="btn btn-block py-2 btn-google" data-onsuccess="iniciarConGoogle" data-theme="dark"><span class="icon-google mr-3"></span> Iniciar sesión con Google</button>
+                  <div class="btn btn-block py-2 g-signin2" data-onsuccess="iniciarConGoogle" data-theme="dark">
+                    <span class="text-container">Iniciar sesión con Google</span>
+                  </div>
                 </div>
               </form>
             </div>
