--- a/login.html
+++ b/login.html
@@ -80,7 +80,11 @@
                     <span class="icon-facebook mr-3"></span> Iniciar sesión con Facebook
                   </a>
                   <div class="btn btn-block py-2 g-signin2" data-onsuccess="iniciarConGoogle" data-theme="dark">
-                    <span class="text-container">Iniciar sesión con Google</span>
+                    <div class="content-wrapper">
+                      <span class='text-container'>
+                        <span>Iniciar sesión con Google</span>
+                      </span>
+                    </div>
                   </div>
                 </div>
               </form>
