--- a/login.html
+++ b/login.html
@@ -79,13 +79,7 @@
                   <a href="#" class="btn btn-block py-2 btn-facebook">
                     <span class="icon-facebook mr-3"></span> Iniciar sesión con Facebook
                   </a>
-                  <div class="btn btn-block py-2 g-signin2" data-onsuccess="iniciarConGoogle" data-theme="dark">
-                    <div class="content-wrapper">
-                      <span class='text-container'>
-                        <span>Iniciar sesión con Google</span>
-                      </span>
-                    </div>
-                  </div>
+                  <div class="btn-block py-2 g-signin2" data-onsuccess="iniciarConGoogle" data-theme="dark"></div>
                 </div>
               </form>
             </div>
