--- a/login.html
+++ b/login.html
@@ -79,7 +79,7 @@
                   <a href="#" class="btn btn-block py-2 btn-facebook">
                     <span class="icon-facebook mr-3"></span> Iniciar sesión con Facebook
                   </a>
-                  <div class="btn-block py-2 g-signin2" data-onsuccess="iniciarConGoogle" data-theme="dark"></div>
+                  <div class="btn-block py-2 g-signin2" data-onsuccess="iniciarConGoogle" data-theme="dark" data-longtitle="true"></div>
                 </div>
               </form>
             </div>
