--- a/login.html
+++ b/login.html
@@ -79,9 +79,7 @@
                   <a href="#" class="btn btn-block py-2 btn-facebook">
                     <span class="icon-facebook mr-3"></span> Iniciar sesión con Facebook
                   </a>
-                  <div class="btn-block py-2 g-signin2" data-onsuccess="iniciarConGoogle" data-theme="dark">
-                    <span class="buttonText">Iniciar sesión con Google</span>
-                  </div>
+                  <div class="btn-block py-2 g-signin2" data-onsuccess="iniciarConGoogle" data-width="420px" data-height="42px" data-theme="dark"></div>
                 </div>
               </form>
             </div>
