--- a/login.html
+++ b/login.html
@@ -76,7 +76,7 @@
 
                 <button id="btnIniciar" type="button" value="Iniciar sesión" class="btn btn-block py-2 btn-primary" onclick="iniciarSesion();" data-trigger="focus" data-placement="top" data-content="Ingrese una direccion de correo válida.">Iniciar sesión</button>
 
-                <span class="text-center my-3 d-block">or</span>
+                <span class="text-center my-3 d-block">o</span>
 
                 <div class="Oauths">
                   <div class="fb-login-button btn-block py-2" onlogin="checkLoginState();" data-width="420" data-size="large" data-button-type="login_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="false"></div>
