--- a/fbeg.html
+++ b/fbeg.html
@@ -29,7 +29,7 @@
   window.fbAsyncInit = function() {
     FB.init({
       appId      : '832729297606995',
-      cookie     : true,                     // Enable cookies to allow the server to access the session.
+      cookie     : false,                     // Enable cookies to allow the server to access the session.
       xfbml      : true,                     // Parse social plugins on this webpage.
       version    : 'v11.0'           // Use this Graph API version for this call.
     });
@@ -49,13 +49,18 @@
     });
   }
 
+  function logOut(){
+    FB.logout(function(response) {
+      console.log("Usuario desconectado");
+      // user is now logged out
+    });
+  }
 </script>
 
-
 <!-- The JS SDK Login Button -->
+<div class="fb-login-button" data-width="420" data-size="large" data-button-type="login_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="false" onclick="checkLoginState();"></div>
 
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-</fb:login-button>
+<button id="logout" type="button" onclick="logOut();">Desconectar</button>
 
 <div id="status">
 </div>
