--- a/fbeg.html
+++ b/fbeg.html
@@ -59,13 +59,13 @@
 
 <!-- The JS SDK Login Button -->
 <div class="fb-login-button" data-width="420" data-size="large" data-button-type="login_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="false" onclick="checkLoginState();"></div>
-
+<br>
 <button id="logout" type="button" onclick="logOut();">Desconectar</button>
 
 <div id="status">
 </div>
 
 <!-- Load the JS SDK asynchronously -->
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_LA/sdk.js"></script>
 </body>
 </html>
