--- a/my-profile.html
+++ b/my-profile.html
@@ -82,6 +82,7 @@
   <script src="js/my-profile.js"></script>
   <script src="js/signout.js"></script>
   <script src="js/google.js"></script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js"></script>
   <script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
 </body>
 
