--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
     <script src="js/init.js"></script>
     <script src="js/signout.js"></script>
     <script src="js/google.js"></script>
+    <script src="js/facebook.js"></script>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js"></script>
     <script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
   </body>
