--- a/product-info.html
+++ b/product-info.html
@@ -60,6 +60,7 @@
   <script src="js/product-info.js"></script>
   <script src="js/signout.js"></script>
   <script src="js/google.js"></script>
+  <script src="js/facebook.js"></script>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js"></script>
   <script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
 </body>
