--- a/login.html
+++ b/login.html
@@ -75,7 +75,7 @@
                 <span class="text-center my-3 d-block">o</span>
 
                 <div class="Oauths">
-                  <div class="fb-login-button" data-width="420px" data-height="42px" data-size="large" data-button-type="login_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="false" onclick="fbUserLogin();"></div>
+                  <fb:login-button class="fb-login-button" data-width="420px" data-height="42px" data-size="large" data-button-type="login_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="false" onlogin="checkLoginState();"></fb:login-button>
                   <div class="btn-block py-2 g-signin2" data-onsuccess="iniciarConGoogle" data-width="420px" data-height="42px" data-theme="dark"></div>
                 </div>
               </form>
