--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html lang="es">
-
 <head>
+  <link rel="shortcut icon" sizes="30x30" type="image/x-icon" href="img/icon.ico">
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
