--- a/login.html
+++ b/login.html
@@ -55,11 +55,11 @@
               <form action="#">
                 <div class="form-group first">
                   <label for="usuario">Usuario</label>
-                  <input type="email" class="form-control" placeholder="tu-email@gmail.com" id="usuario">
+                  <input id="usuario" type="email" class="form-control" placeholder="tu-email@gmail.com">
                 </div>
                 <div class="form-group last mb-3">
                   <label for="contrasenia">Contraseña</label>
-                  <input type="password" class="form-control" placeholder="Tu contraseña" id="contrasenia">
+                  <input id="contrasenia" type="password" class="form-control" placeholder="Tu contraseña" onkeypress="verificarEnter(event);">
                 </div>
 
                 <div class="d-sm-flex mb-5 align-items-center">
