--- a/login.html
+++ b/login.html
@@ -95,6 +95,7 @@
   <script src="js/facebook.js"></script>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js"></script>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/dcodeIO/bcrypt.js/dist/bcrypt.min.js"></script>
 </body>
 
 </html>
