--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="google-signin-client_id" content="248612205064-44cri76i4vjos5r0i3ise0njco0gsg6k.apps.googleusercontent.com">
 
     <title>eMercado - Todo lo que busques está aquí</title>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
     <!-- Bootstrap core CSS -->
@@ -20,11 +20,11 @@
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
-        <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
-        <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
-        <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
-        <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-        <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <a class="py-2 d-none d-md-inline-block" href="index.html"><i class="fas fa-home" style="color: white;"></i> Inicio</a>
+        <a class="py-2 d-none d-md-inline-block" href="categories.html"><i class="fas fa-list-ul" style="color: white;"></i> Categorías</a>
+        <a class="py-2 d-none d-md-inline-block" href="products.html"><i class="fas fa-cube" style="color: white;"></i> Productos</a>
+        <a class="py-2 d-none d-md-inline-block" href="sell.html"><i class="fas fa-edit" style="color: white;"></i> Vender</a>
+        <a class="py-2 d-none d-md-inline-block" href="cart.html"><i class="fas fa-shopping-cart" style="color: white;"></i> Mi carrito</a>
         <div class="d-none d-md-inline-block dropdown show">
           <a class="btn btn-secondary" role="button" id="dropdownUser" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <div class="">
@@ -37,8 +37,8 @@
             </div>
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
-            <a class="dropdown-item" href="#" onclick="cerrarSesion();">Cerrar sesión</a>
+            <a class="dropdown-item" href="my-profile.html"><i class="fas fa-user" style="color: grey;"></i> Mi perfil</a>
+            <a class="dropdown-item" href="#" onclick="cerrarSesion();"><i class="fas fa-sign-out-alt" style="color: grey;"></i> Cerrar sesión</a>
           </div>
         </div>
       </div>
