--- a/cart.html
+++ b/cart.html
@@ -62,12 +62,70 @@
     </div>
   </nav>
   <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 5 (Fecha de entrega: 17/10/2021) y Entrega 7 (Fecha de entrega: 14/11/2021).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+    <h1>Mi carrito</h1>
+    <hr class = "my-4">
+    <div class="container">
+      <h3>Productos</h3>
+      <div class="container pt-4">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col"></th>
+              <th scope="col">Nombre</th>
+              <th scope="col">Cantidad</th>
+              <th scope="col">Precio</th>
+              <th scope="col"></th>
+            </tr>
+          </thead>
+          <tbody id="productos">
+          </tbody>
+        </table>
+      </div>
+      <div class="pl-4">
+        <label for="selectDivisa">Divisa</label>
+        <select id="selectDivisa" class="col-md-1 form-control" onchange="actualizarCotizacion(event)">
+          <option onclick="" value="UYU" selected>UYU</option>
+          <option onclick="" value="USD">USD</option>
+        </select>
+      </div>
+      <div class="d-block my-4 pt-4">
+        <h3>Envío</h3>
+        <div class="custom-control custom-radio">
+          <input id="goldradio" value="0.13" name="publicationType" type="radio" class="custom-control-input" checked="" required="">
+          <label class="custom-control-label" for="goldradio">Premium (13%)</label>
+        </div>
+        <div class="custom-control custom-radio">
+          <input id="premiumradio" value="0.07" name="publicationType" type="radio" class="custom-control-input" required="">
+          <label class="custom-control-label" for="premiumradio">Express (7%)</label>
+        </div>
+        <div class="custom-control custom-radio">
+          <input id="standardradio" value="0.05" name="publicationType" type="radio" class="custom-control-input" required="">
+          <label class="custom-control-label" for="standardradio">Estándar (5%)</label>
+        </div>
     </div>
+    <h3 class="pt-4 py-2">Costos</h3>
+    <ul class="list-group mb-3">
+        <li class="list-group-item d-flex justify-content-between lh-condensed">
+          <div>
+            <h6 class="my-0">Subtotal</h6>
+            <small class="text-muted">Unitario del producto</small>
+          </div>
+          <span class="text-muted" id="productCostText">-</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between lh-condensed">
+          <div>
+            <h6 class="my-0">Tipo de envío</h6>
+            <small class="text-muted">Según el tipo de envío</small>
+          </div>
+          <span class="text-muted" id="envioText">-</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between">
+          <span id="spanTotal">Total ($)</span>
+          <strong id="totalCostText">-</strong>
+        </li>
+      </ul>
+    <hr class="mb-4">
+    <button class="btn btn-primary btn-lg" type="submit">Comprar</button>
   </div>
   <div id="spinner-wrapper">
     <div class="lds-ring">
